--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
+    "@sanity/client": "^3.3.3",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "fs": "^0.0.1-security",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-native": "0.68.2",
+    "react-native-fs": "^2.20.0",
     "react-native-heroicons": "^2.2.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
